@@ -2,6 +2,11 @@
 
 	* support/regression/tests/bug-3249.c:
 	  Do not test non-intrinsic named address space areas for mcs51, as DATA is overwritten by stack there.
+	* support/regression/MakeList:
+	  Disable a test for -mmcs51 --model-small --stack-auto that is known to fail for mcs51 with --stack-auto (bug #3540).
+	* src/SDCCglue.c,
+	  support/regression/tests/bug-1981238.c:
+	  Fix bug #3542.
 
 2023-01-31 Philipp Klaus Krause <philipp@colecovision.eu>
 
